supporting long tab names, overview/add group alignment fix

--- a/client/src/components/Tabs/Tabs.css
+++ b/client/src/components/Tabs/Tabs.css
@@ -10,6 +10,9 @@
   line-height: 24px;
   overflow: hidden;
   position: relative;
+  display: flex;
+  justify-content: center;
+  padding: 0 50px;
 }
 .selected-tab li {
   border: 2px solid #636363;
@@ -20,7 +23,9 @@
   position: relative;
   z-index: 0;
   color: #636363;
-  width: 150px;
+  max-width: 20%;
+  min-width: 0;
+  flex: 1;
   font-size: .6em;
 }
 
@@ -37,7 +42,7 @@
   position: absolute;
   top: 0;
   height: 100%;
-  width: 44px;
+  width: 32px;
   background-color: #FFF;
 }
 .selected-tab li:before {
@@ -208,6 +213,7 @@
 }
 .content {
   background: white;
+  color: black;
   padding: 20px;
   width: 100%;
   height: 100%;
@@ -218,30 +224,44 @@
 .content h3 {
   position: relative;
   color: black;
-  margin-right: 500px;
+  font-size: 1em;
+}
+.content > h3 {
+  margin-top: 20px;
 }
 .content h2 {
   padding: 0px 0 5px 0px;
   color: black;
-  font-size: 1.5vw;
-  position: sticky;
 }
 .content p {
   width: 100%;
   height: 100%;
   padding: 0px 0 5px 0px;
-  position: relative;
-  left: 210px;
-  top: -25px;
+}
+.content-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.content-settings {
+  display: flex;
+  flex-direction: column;
+}
+.content-timeinput {
+  margin: 0 5px;
+}
+.content-radiobuttons {
+  margin: 2px 20px;
+  flex: 1;
 }
 
 .active-content {
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 .active-content input::placeholder {
   color: grey;
   opacity: 0.8;
-  font-size: 1.0vw;
 }
 
 .h3 button {
@@ -249,37 +269,32 @@
 }
 
 .simadv {
-  position: sticky;
-  width: 300px;
-  left: 750px;
-  top: -30px;
+  display: flex;
+  font-size: .7em;
+  margin: 10px 20px;
 }
 
-.simadv h3 {
-  font-size: 1.2rem;
-  position: absolute;
-  left: -200px;
-  top: 0px;
+.tab-text {
+  width: calc(100% - 16px);
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .studentbuttonemail {
-  position: inherit;
   z-index: 1000;
-  margin-left: 70%;
-  margin-top: -80px;
   left: 100px;
-  width: 30%;
-  height: 50px;
-  margin-bottom: -30px;
+  padding: 10px 20px;
   font-family:  "Montserrat", sans-serif;
-  font-size: 1.5vw;
+  font-size: 1em;
   color: white;
   background-color: #8f001a;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   border: none;
   text-align: center;
   vertical-align: middle;
-  border-radius: 10px
+  border-radius: 10px;
 }
 .studentbuttonemail:hover{
   cursor: pointer;
@@ -310,19 +325,16 @@
 }
 
 .addgroup {
-  position: sticky;
   z-index: 1000;
-  left: 1500px;
-  top: 480px;
-  width: 5%;
-  height: 50px;
   font-family:  "Montserrat", sans-serif;
-  font-size: 1.3vw;
+  padding: 10px 20px;
+  font-size: 1em;
   color: white;
   background-color: #8f001a;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   border: none;
-  border-radius: 10px
+  border-radius: 10px;
+  align-self: flex-end;
 }
 .addgroup:hover{
   cursor: pointer;
@@ -377,16 +389,24 @@
   height: 300px;
 }
 
-#time {
-  display: flex;
-  position: absolute;
-  left:110px;
-  top: 53px;
-  width: 100px;
-  height: 20px;
-}
 #roomh3 {
   position: relative;
   top: 250px;
   left: -500px;
+}
+
+@media screen and (orientation: portrait) {
+  .content-row {
+    flex-direction: column-reverse;
+    align-items: stretch;
+  }
+  .content-settings {
+    margin-top: 20px;
+  }
+  .simadv {
+    margin: 10px 0;
+  }
+  .content-radiobuttons {
+    margin: 0 0 0 20px;
+  }
 }
